Working process for initial data input + model processing. Next steps include running regression process.

--- a/Inventory Forecast.Rmd
+++ b/Inventory Forecast.Rmd
@@ -719,3 +719,16 @@ list("test1" = Test,
 
 ```
 
+
+
+```{r}
+
+  a = c(1,2,3)
+  b = c(4,5,6)
+  df = data.frame(x = a, y = b)    
+
+str(df)
+```
+
+
+
