--- a/Inventory Forecast.Rmd
+++ b/Inventory Forecast.Rmd
@@ -19,6 +19,8 @@ library('lmtest')
 library('DT')
 library('ggpubr')
 library('DescTools')
+library('lubridate')
+
 
 ```
 
@@ -447,7 +449,7 @@ regression_metrics <- function(x){
   for(i in seq_along(forecast_df$Date)){
     
     forecast_df$Upper_Conf[i] = round(forecast_df$Forecast[i] + (critical_t * regression_standard_error),0)
-    forecast_df$Lower_Conf[i] = round(forecast_df$Forecast[i] + (critical_t * regression_standard_error),0)
+    forecast_df$Lower_Conf[i] = round(forecast_df$Forecast[i] - (critical_t * regression_standard_error),0)
     
   }
   
@@ -718,8 +720,6 @@ list("test1" = Test,
 
 
 ```
-
-
 
 ```{r}
 
